# SPDX-License-Identifier: GPL-3.0-or-later
#
# Copyright (C) 2023  Jacob Koziej <jacobkoziej@gmail.com>

option(
        'trace',
        type        : 'boolean',
        description : 'enable tracing at runtime',
)

option(
        'tests',
        type        : 'feature',
        value       : 'auto',
        description : 'build tests',
)
