# SPDX-License-Identifier: GPL-3.0-or-later
#
# Copyright (C) 2023  Jacob Koziej <jacobkoziej@gmail.com>

jkcc_src += files(
        'addressof.c',
        'alignas.c',
        'alignof.c',
        'assignment.c',
        'atomic.c',
        'binary_operator.c',
        'cast.c',
        'character_constant.c',
        'dereference.c',
        'expression.c',
        'floating_constant.c',
        'function_specifier.c',
        'generic_association.c',
        'generic_association_list.c',
        'generic_selection.c',
        'identifier.c',
        'integer_constant.c',
        'member_access.c',
        'pointer.c',
        'sizeof.c',
        'specifier_qualifier_list.c',
        'static_assert.c',
        'storage_class_specifier.c',
        'string_literal.c',
        'ternary_operator.c',
        'type_name.c',
        'type_qualifier.c',
        'type_qualifier_list.c',
        'type_specifier.c',
        'unary_operator.c',
)
