# SPDX-License-Identifier: GPL-3.0-or-later
#
# Copyright (C) 2023  Jacob Koziej <jacobkoziej@gmail.com>

jkcc_src += files(
        'addressof.c',
        'alignas.c',
        'alignof.c',
        'array.c',
        'assignment.c',
        'atomic.c',
        'binary_operator.c',
        'call.c',
        'case.c',
        'cast.c',
        'character_constant.c',
        'declaration.c',
        'dereference.c',
        'empty.c',
        'expression.c',
        'floating_constant.c',
        'for.c',
        'function.c',
        'function_specifier.c',
        'generic_association.c',
        'generic_association_list.c',
        'generic_selection.c',
        'identifier.c',
        'if.c',
        'integer_constant.c',
        'label.c',
        'list.c',
        'member_access.c',
        'pointer.c',
        'sizeof.c',
        'static_assert.c',
        'storage_class_specifier.c',
        'string_literal.c',
        'struct.c',
        'switch.c',
        'ternary_operator.c',
        'type.c',
        'type_qualifier.c',
        'type_specifier.c',
        'unary_operator.c',
        'while.c',
)
