# SPDX-License-Identifier: GPL-3.0-or-later
#
# Copyright (C) 2023  Jacob Koziej <jacobkoziej@gmail.com>

jkcc_src += files(
        'binop.c',
        'cmp.c',
        'declaration.c',
        'dereference.c',
        'if.c',
        'mov.c',
        'statement.c',
        'store.c',
        'symbol.c',
)
