# SPDX-License-Identifier: GPL-3.0-or-later
#
# Copyright (C) 2023  Jacob Koziej <jacobkoziej@gmail.com>

jkcc_src += files(
        'binop.c',
        'break.c',
        'cmp.c',
        'continue.c',
        'declaration.c',
        'dereference.c',
        'if.c',
        'list.c',
        'mov.c',
        'return.c',
        'sizeof.c',
        'statement.c',
        'store.c',
        'symbol.c',
        'while.c',
)
